# sizeliteral

./: CMakeLists.txt  README.md  main.cpp  sizeliteral.ixx  sizeliteral.sln  sizeliteral.vcxproj  sizeliteral.vcxproj.filters
.github/workflows/: ci.yml
